<resources>
    <string name="app_name">Salud app</string>
    <string name="main_btn_text_ingresar">Ingresar</string>
    <string name="main_text_bienvenido">Bienvenido</string>
    <string name="main_edit_hint_usuario">Usuario</string>
    <string name="main_edit_hint_contrasenia">Contraseña</string>
    <string name="main_text_crear_cuenta">Crear cuenta</string>
    <string name="main_text_recordar_usuario">Recordar Usuario</string>
    <string name="conten_agregar_usuario">Agregar usuario</string>
    <string name="txt_repetir_contrase_a">Repetir contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="genero">Genero</string>
    <string name="cancelar">Cancelar</string>
    <string name="crear">Crear</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento</string>
    <string name="salud_app">Salud App</string>
    <string name="chequeo_medic">Chequeo medicó</string>
    <string name="chequeo">Chequeo</string>
    <string name="dieta">Dieta</string>
    <string name="dieta_layout">Dieta</string>

    <!-- Pantalla Dieta -->
    <string name="btn_lunes">L</string>
    <string name="btn_martes">M</string>
    <string name="btn_miercoles">X</string>
    <string name="btn_jueves">J</string>
    <string name="btn_viernes">V</string>
    <string name="btn_sabado">S</string>
    <string name="btn_domingo">D</string>
    <string name="txt_dia_semana">Dia</string>
    <string name="txt_desayuno">Desayuno</string>
    <string name="txt_almuerzo">Almuerzo</string>
    <string name="txt_cena">Cena</string>


    <string-array name="Genero">
        <item>Femenino</item>
        <item>Masculino</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rutina_de_ejercicio">Rutina de ejercicio</string>

    <string name="usuario_marcos">Usuario: Marcos</string>
    <string name="rutina">rutina</string>

    <string name="chequeos_m_dicos">Chequeos médicos</string>
    <string name="agregar_chequeo">Agregar Chequeo</string>
    <string name="editar_chequeo_m_dico">Editar chequeo médico</string>

    <!-- TEXTOS PANTALLA AGREGAR CHEQUEO DE SALUD -->
    <string name="txtPesoActual">Peso (kg)</string>
    <string name="txtAlturaActual">Altura (cm)</string>
    <string name="txtPresionArterial">Presion arterial (sis.dias)</string>
    <string name="txtConsumoAgua">Consumo de agua (vasos)</string>
    <string name="txtRitmoCardiaco">Ritmo cardiaco (bpm)</string>

    <string name="btnCrearChequeo">Crear</string>
    <string name="lblTituloAgregarChequeo">Ingresa los datos siguientes:</string>

    <!-- TEXTOS PANTALLA CRAER RUTINA DE EJERCICIOS -->
    <string name="lblCrearRutinaEjercicio">Rutina de Ejercicio</string>
    <string name="lblPresionArterial">Presion arterial:</string>

    <!-- *************************************** -->
</resources>


