<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FCFFFFFF"
    tools:context=".dieta"
    tools:visibility="visible">


    <View
        android:id="@+id/topView"
        android:layout_width="411dp"
        android:layout_height="60dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/chequeo"
        app:layout_constraintEnd_toEndOf="@+id/topView"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/topView"
        app:srcCompat="@drawable/dieta"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:text="@string/dieta"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="359dp"
        android:layout_height="48dp"
        android:layout_marginTop="60dp"
        app:flow_horizontalAlign="center"
        app:flow_verticalAlign="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topView">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnLunes"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginHorizontal="3dp"
                android:background="@drawable/btn_redondo"
                android:text="@string/btn_lunes"
                android:textColor="@color/white"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/btnMartes"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginHorizontal="3dp"
                android:background="@drawable/btn_redondo"
                android:text="@string/btn_martes"
                android:textColor="@color/white"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/btnMiercoles"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginHorizontal="3dp"
                android:background="@drawable/btn_redondo"
                android:text="@string/btn_miercoles"
                android:textColor="@color/white"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/btnJueves"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginHorizontal="3dp"
                android:background="@drawable/btn_redondo"
                android:text="@string/btn_jueves"
                android:textColor="@color/white"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/btnViernes"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginHorizontal="3dp"
                android:background="@drawable/btn_redondo"
                android:text="@string/btn_viernes"
                android:textColor="@color/white"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/btnSabado"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginHorizontal="3dp"
                android:background="@drawable/btn_redondo"
                android:text="@string/btn_sabado"
                android:textColor="@color/white"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/btnDomingo"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginHorizontal="3dp"
                android:background="@drawable/btn_redondo"
                android:text="@string/btn_domingo"
                android:textColor="@color/white"
                tools:ignore="TouchTargetSizeCheck" />
        </TableRow>

    </TableLayout>

    <TableLayout
        android:layout_width="367dp"
        android:layout_height="479dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout">

        <TableRow
            android:layout_width="346dp"
            android:layout_height="68dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            android:background="#110C4C">

            <TextView
                android:id="@+id/txtDiaSemana"
                android:layout_width="209dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:text="@string/txt_dia_semana"
                android:textColor="@color/white"
                android:textSize="30dp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            android:background="#1E1B1B">

            <TextView
                android:id="@+id/txtDesayuno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="4dp"
                android:text="txtDesayuno"
                android:textColor="@color/white"
                android:textSize="20dp"
                tools:text="@string/txt_desayuno" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            android:background="#1E1B1B">

            <TextView
                android:id="@+id/txtAlmuerzo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="4dp"
                android:text="txtAlmuerzo"
                android:textColor="@color/white"
                android:textSize="20dp"
                tools:text="@string/txt_almuerzo" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            android:background="#1E1B1B">

            <TextView
                android:id="@+id/txtCena"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="4dp"
                android:text="txtCena"
                android:textColor="@color/white"
                android:textSize="20dp"
                tools:text="@string/txt_cena" />
        </TableRow>
    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>