<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">



    <View
        android:id="@+id/topView"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="95dp"
        android:layout_height="86dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/conten_agregar_usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_person_add_24" />


    <EditText
        android:id="@+id/editNewUsuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:background="@drawable/borde_redondo"
        android:drawableStart="@drawable/ic_person_24"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/main_edit_hint_usuario"
        android:inputType="text"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textColor="@color/colorPrimary"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topView" />

    <EditText
        android:id="@+id/editNewContrasenia"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:background="@drawable/borde_redondo"
        android:drawableStart="@drawable/ic_contrasenia"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/main_edit_hint_contrasenia"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textColor="@color/colorPrimary"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNewUsuario"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editNewRepetirContrasenia"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:background="@drawable/borde_redondo"
        android:drawableStart="@drawable/ic_contrasenia"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/txt_repetir_contrase_a"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textColor="@color/colorPrimary"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNewContrasenia"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editNewNombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:background="@drawable/borde_redondo"
        android:drawableStart="@drawable/ic_person_24"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="text"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textColor="@color/colorPrimary"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNewRepetirContrasenia" />

    <EditText
        android:id="@+id/editNewApellido"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:background="@drawable/borde_redondo"
        android:drawableStart="@drawable/ic_person_24"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/apellido"
        android:inputType="text"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textColor="@color/colorPrimary"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNewNombre" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/borde_redondo"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNewApellido"
        tools:ignore="SpeakableTextPresentCheck" />


    <EditText
        android:id="@+id/editNewFecha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:background="@drawable/borde_redondo"
        android:clickable="true"
        android:drawableStart="@drawable/ic_date"
        android:drawablePadding="16dp"
        android:ems="10"
        android:focusable="true"
        android:hint="@string/fecha_de_nacimiento"
        android:inputType="none"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textColor="@color/colorPrimary"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />


    <Button
        android:id="@+id/btnCrearUsuario"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/btn_redondo"
        android:text="@string/crear"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/btnCancelar"
        app:layout_constraintHorizontal_bias="0.74"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNewFecha"
        tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btnCancelar"

        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="32dp"
        android:text="@string/cancelar"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"

        android:textStyle="bold"
        app:cornerRadius="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNewFecha"
        app:strokeColor="@color/colorPrimary"

        tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

    <CheckBox
        android:id="@+id/checkRecordarUsuario1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/main_text_recordar_usuario"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNewFecha" />

</androidx.constraintlayout.widget.ConstraintLayout>